<resources>
    <string name="app_name">Hihi kaka</string>

    <string name="button_hiragana">hiragana</string>
    <string name="button_katakana">katakana</string>
    <string name="button_exercise">exercise</string>

    <string name="hira_chart_title">hiragana chart</string>
    <string name="kata_chart_title">katakana chart</string>
    <string name="score_title">your score</string>
    <string name="title_exercise">select exercise</string>

    <string name="basic_header">basic</string>
    <string name="combo_header">combo</string>
    <string name="dakuten_header">dakuten</string>
    <string name="stroke_header">stroke order</string>

    <string name="null_string">null</string>

    <string name="about_author">\u00a9 2017 Dai Nguyen</string>
    <string name="about_quote">進み続けてさえいれば、遅くとも関係ない。\n\
        It does not matter how slowly you go as long as you do not stop. \
        (Confucius)</string>
    <string name="share_content">Great app to learn Japanese Hiragana and Katakana characters. \
        Get it on Google Play at: </string>

    <string name="thank_statement">Thanks for using this app.\nPlease share and encourage me on Google Play.</string>
    <string name="parrot_app_intro">Learn basic Japanese vocabulary and expressions with Parrot Japanese.</string>
    <string name="parrot_app_name">(touch to see on Google Play)</string>

    <!-- [START] preference screen strings -->
    <string name="title_setting">settings</string>
    <string name="pref_category_ninja">NINJA ICON</string>

    <string name="pref_ninja_touch_sound_title">play character sound</string>
    <string name="pref_ninja_touch_sound_on">enable play character sound on touching ninja icon</string>
    <string name="pref_ninja_touch_sound_off">disable play character sound on touching ninja icon</string>
    <string name="pref_ninja_touch_sound_key">prefkey_ninja_touch_sound</string>

    <string name="pref_ninja_timer_title">memo timer</string>
    <string name="pref_ninja_timer_summary">display a new character every</string>
    <string name="pref_ninja_timer_key">prefkey_ninja_timer</string>
    <string name="pref_timer_unit">seconds</string>
    <string name="pref_timer_off">off</string>
    <string-array name="pref_ninja_timer_entries">
        <item>3 seconds</item>
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>off</item>
    </string-array>
    <string-array name="pref_ninja_timer_values">
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>0</item>
    </string-array>

    <string name="pref_ninja_update_mode">update character mode</string>
    <string name="pref_ninja_random_mode_on">random</string>
    <string name="pref_ninja_random_mode_off">sequential</string>
    <string name="pref_ninja_random_mode_key">prefkey_ninja_random</string>

    <string name="pref_category_exercise">EXERCISE</string>
    <string name="pref_exercise_question_count">number of questions in an exercise</string>
    <string name="pref_exercise_question_dialog">select number of questions</string>
    <string name="pref_exercise_question_key">prefkey_question_count</string>
    <string name="pref_question_unit">questions</string>
    <string-array name="pref_question_counts">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>

    <string name="pref_exercise_sound_title">play sound on answering</string>
    <string name="pref_exercise_sound_on">enable</string>
    <string name="pref_exercise_sound_off">disable</string>
    <string name="pref_exercise_sound_key">prefkey_exercise_sound_play</string>
    <!-- [END preference screen -->

    <string name="adsid_banner">ca-app-pub-5518862868429114/7553503657</string>
    <string name="adsid_fullscreen">ca-app-pub-5518862868429114/2699589385</string>
</resources>
